cmake_minimum_required(VERSION 3.19)
project(test_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(test_1 main.cpp gramar.cpp gramar.h query_ad.cpp query_ad.h target_user_context.cpp target_user_context.h test_include.cpp test_include.h lc.cpp stop_word.cpp stop_word.h LeetCode/ms1.cpp LeetCode/LeetCodeTest.cpp LeetCode/LeetCodeTest.h LeetCode/MeiTuan.cpp LeetCode/nio.cpp LeetCode/nio.h LeetCode/msbs.cpp LeetCode/zoom.cpp LeetCode/msbs2.cpp LeetCode/meituan2.cpp)